<resources>
    <string name="app_name">LoL Stats</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="add">Add new game statistics</string>
    <string name="remove">Remove</string>
    <string name="update">Updates</string>
    <string name="search">Search</string>
    <string name="addGame">Add game</string>
    <string name="deleteEverything">Delete everything?</string>
    <string name="dialog_delete_everything">Are you sure you want to delete everything?</string>
    <string name="dialog_yes">Yes</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="action_deleteEverything">Delete</string>
    <string name="champion_played">Champion played</string>
    <string name="game_outcome">Outcome</string>
    <string name="kills">Kills</string>
    <string name="deaths">Deaths</string>
    <string name="assists">Assists</string>
    <string name="champion">Champion</string>
    <string name="k">K</string>
    <string name="d">D</string>
    <string name="a">A</string>
    <string name="kda">KDA </string>
    <string name="id">ID</string>
    <string name="search_kda">Enter the name of the champion to see his KDA and win rate:</string>
    <string name="check_kda">Check KDA / win rate</string>
    <string name="best_kda">Your champion with the highest KDA:</string>
    <string name="highest_win_rate">Your champion with the highest win rate:</string>
    <string name="delete_row">About to delete this entery</string>
    <string name="snackbar_action_undo">Delete</string>
    <string name="champion_name">Enter champion name to filter the table:</string>
    <string name="filter">Filter</string>

</resources>
