<?xml version="1.0" encoding="utf-8"?>
<TableRow
    android:gravity="center_horizontal"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/prviRedIndexi"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="1dp"
    android:layout_marginLeft="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginTop="1dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:background="@drawable/cell_shape"
        android:gravity="center_horizontal"
        android:text="@string/champion"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="1"
        android:background="@drawable/cell_shape"
        android:gravity="center_horizontal"
        android:text="@string/game_outcome"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="2"
        android:background="@drawable/cell_shape"
        android:gravity="center_horizontal"
        android:text="@string/kills"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="3"
        android:background="@drawable/cell_shape"
        android:gravity="center_horizontal"
        android:text="@string/deaths"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="4"
        android:background="@drawable/cell_shape"
        android:gravity="center_horizontal"
        android:text="@string/assists"
        android:textColor="@color/black" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="5"
        android:background="@drawable/cell_shape"
        android:gravity="center_horizontal"
        android:text="@string/kda"
        android:textColor="@color/black" />

</TableRow>